--- a/bgp-router/Dockerfile
+++ b/bgp-router/Dockerfile
@@ -3,3 +3,6 @@ FROM ubuntu:22.04
 
 # update and install bird routing deamon
 RUN apt update && apt install bird -y
+
+# start bgp server
+CMD mkdir -p /run/bird && bird -d
