add ping tool for both docker image. update compose file for additional server per AS network

--- a/bgp-router/Dockerfile
+++ b/bgp-router/Dockerfile
@@ -2,7 +2,7 @@
 FROM ubuntu:22.04
 
 # update and install bird routing deamon
-RUN apt update && apt install bird -y
+RUN apt update && apt install iputils-ping -y && apt install bird -y
 
 # start bgp server
 CMD mkdir -p /run/bird && bird -d
